# Algorithms-and-Data-Structures

BigInteger/: CMakeLists.txt  main.cpp  test_main.cpp
BigInteger/include/: BigInteger.hpp
BigInteger/src/: BigInteger.cpp
BigInteger/test/: test_main.cpp
Rational/: CMakeLists.txt  Rational.cpp  Rational.h  main.cpp
Rational/include/: Rational.hpp
Rational/src/: Rational.cpp
Rational/test/: test_main.cpp
SplayTree/: CMakeLists.txt  splay_tree.h
